--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="library">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <title>Unknown Worlds</title>
@@ -9,14 +9,17 @@
 <script type="text/javascript" src="lib/jquery-3.2.1.js"></script>
 <script type="text/javascript" src="lib/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="lib/angular.min.js"></script>
-<script type="text/javascript" src="js/app.js"></script>
-<script type="text/javascript" src="js/popoverInit.js""></script>
-</head>
-<body data-ng-app="webapp">
-  <div class="container-fluid" ng-controller="LandingController as lCtrl">
 
+<script type="text/javascript" src="js/controllers.js"></script>
+<script type="text/javascript" src="js/validationFunctions.js"></script>
+
+<script type="text/javascript" src="js/popoverInit.js""></script>
+
+</head>
+<body ng-app="library" ng-controller="LandingController as lCtrl">
+  <div class="container-fluid">
     <!-- login section, visible by default on opening the page -->
-    <form id="loginForm" name="loginForm" ng-submit="lCtrl.login()" novalidate>
+    <form id="loginForm" ng-if="navLogin" name="loginForm" ng-submit="lCtrl.login()" novalidate action="">
       <div class="row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
           <div class="account-wall">
@@ -34,23 +37,23 @@
               </div>
               <div class="row">
                 <div class="col-xs-8 col-xs-offset-2">
-                  <form>
-                    <div class="form-group">
-                      <label for="exampleInputEmail1">Email address</label> <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                      <div>
-                        <label for="exampleInputPassword1">Password</label> <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                      </div>
+                  <div class="form-group">
+                    <label for="inputUsername">Username</label> <input type="text" class="form-control" id="inputUsername" placeholder="Username" ng-model="lCtrl.oldCustomer.username">
+                    <div>
+                      <label for="inputPassword1">Password</label> <input type="password" class="form-control" id="inputPassword1" placeholder="Password" ng-model="lCtrl.oldCustomer.password">
                     </div>
-                  </form>
+                  </div>
+                  <div class="auth-fail alert alert-danger" role="alert" ng-if="lCtrl.wrongLoginData">{{lCtrl.wrongLoginMessage}}</div>
                 </div>
               </div>
             </div>
+
             <div class="row">
               <div class="col-xs-4 col-xs-offset-2 text-center">
-                <button type="submit" class="btn btn-primary">Sing-in</button>
+                <button type="submit" class="btn btn-primary" ng-click="lCtrl.login()">Sing-in</button>
               </div>
               <div class="col-xs-4 text-center">
-                <button type="submit" class="btn btn-default" ng-click="lCtrl.toRegister()">Register</button>
+                <button type="submit" class="btn btn-default" ng-click="lCtrl.navToRegister()">Register</button>
               </div>
             </div>
           </div>
@@ -58,11 +61,9 @@
       </div>
     </form>
 
-
-
     <!-- Registration, not visible by default -->
 
-    <div class="row" id="registrationForm" style="display: none">
+    <div class="row" id="registrationForm" ng-if="navRegister">
       <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
         <div class="account-wall">
           <div class="row">
@@ -74,7 +75,7 @@
             </div>
           </div>
           <!-- registerForm.$valid && -->
-          <form ng-submit="lCtrl.register()" name="registerForm" novalidate>
+          <form ng-submit="lCtrl.register()" name="registerForm" novalidate action="">
             <div class="form-group">
               <div class="row">
                 <div class="col-xs-8 col-xs-offset-2">
@@ -120,8 +121,7 @@
                       data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrl.blockError}}"
                     >
                   </div>
-                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrl.newBlockNumberOk">{{lCtrl.blockError}}
-                  </div>
+                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrl.newBlockNumberOk">{{lCtrl.blockError}}</div>
                 </div>
               </div>
 
@@ -172,8 +172,8 @@
               <div class="row">
                 <div class="col-xs-8 col-xs-offset-2">
                   <div>
-                    <label for="InputPassword2">Repeat password</label> <input type="password" class="form-control" id="InputPassword2" placeholder="Password" ng-model="lCtrl.newCustomer.password2" required
-                      data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrl.pass2Error}}"
+                    <label for="InputPassword2">Repeat password</label> <input type="password" class="form-control" id="InputPassword2" placeholder="Repeat password"
+                      ng-model="lCtrl.newCustomer.password2" required data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="{{lCtrl.pass2Error}}"
                     >
                   </div>
                   <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrl.newPass2Ok">{{lCtrl.pass2Error}}</div>
@@ -196,8 +196,9 @@
                 <div class="col-xs-8 col-xs-offset-2">
                   <div>
                     <label for="InputDescription1">Short description</label> <input type="text" max="50" class="form-control optional" ng-model="lCtrl.newCustomer.description" id="InputDescription1"
-                      placeholder="Short description" data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="Please provide a short description of yourself">
-                  <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrl.newDescOk">{{lCtrl.descError}}</div>
+                      placeholder="Short description" data-trigger="hover" data-toggle="popover" data-placement="bottom" data-content="Please provide a short description of yourself"
+                    >
+                    <div class="auth-fail alert alert-danger" role="alert" ng-hide="lCtrl.newDescOk">{{lCtrl.descError}}</div>
                   </div>
                 </div>
               </div>
@@ -221,15 +222,16 @@
             <button type="submit" class="btn btn-primary" id="registerButton" ng-click="lCtrl.register()">Register</button>
           </div>
           <div class="col-xs-4 text-center">
-            <button type="submit" class="btn btn-default" ng-click="lCtrl.toLogin()">Back to Sing-in</button>
+            <button type="submit" class="btn btn-default" ng-click="lCtrl.navToLogin()">Back to Sing-in</button>
           </div>
-        </div>
-        <div class="row">
-          <div class="col debug">Review form is {{registerForm.$valid}}</div>
         </div>
       </div>
 
     </div>
+    <!-- Library begins here -->
+    <div ng-if="navLibrary"> asd </div>
+
+
   </div>
 
 </body>
