--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -33,59 +33,72 @@
     <div ng-if="navLibrary" ng-controller="LibController as lib">
       <div class="booklist">
         <div class="row">
-          <div class="col-xs-10 col-xs-offset-1">
-          
+          <div class="col-xs-12 col-xs-offset-0 col-sm-12 col-sm-offset-0">
+
             <nav class="navbar navbar-default">
               <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
-                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span> 
-                    <span class="icon-bar"></span>
+                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" href="#">
-                        <img class="img-rounded img-responsive" src="img/logo.png" alt="logo">
-                  </a><h2 class="navbar-brand">Unknown Worlds</h2>
+                  <a class="navbar-brand" href="#">Brand</a>
                 </div>
-                <div class="collapse navbar-collapse" id="myNavbar">
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">Page 1</a></li>
-                    <li><a href="#">Page 2</a></li>
-                    <li><a href="#">Page 3</a></li>
+                    <li class="active"><a href="#">Link1 <span class="sr-only">(current)</span></a></li>
+                    <li><a href="#">Link2</a></li>
+                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">One more separated link</a></li>
+                      </ul></li>
                   </ul>
-                  <!-- <form class="navbar-form navbar-right" action="">
+                  <form class="navbar-form navbar-right">
                     <div class="form-group">
                       <input type="text" class="form-control" placeholder="Search">
                     </div>
                     <button type="submit" class="btn btn-default">Submit</button>
-                  </form> -->
+                  </form>
                 </div>
+                <!-- /.navbar-collapse -->
               </div>
+              <!-- /.container-fluid -->
             </nav>
 
           </div>
-          </div>
+        </div>
         <div class="row">
-          <div class="col-xs-10 col-xs-offset-1">
+          <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1">
             <table class="table table-hover">
-              <tr>
-                <th>Name</th>
-                <th>Price</th>
-                <th>Description</th>
-                <th>Picture</th>
-                <th>Likes</th>
-                <th>Purchase</th>
-                <th>Review</th>
-              </tr>
-              <tr class="center" ng-repeat="product in lib.products" ng-show="product.canRead">
-                <td>{{product.name}}</td>
-                <td>{{product.price | currency}}</td>
-                <td>{{product.description}}</td>
-                <td>Picture url here</td>
-                <td>Likes here</td>
-                <td><button class="btn btn-default" ng-show="product.canBuy">Add to Cart  <span class="glyphicon glyphicon-shopping-cart"></span></button></td>
-                <td><button class="btn btn-default" on-click="lib.openreview(product.name)">Read reviews  <span class="glyphicon glyphicon-eye-open"</span></button></td>
+              <tr class="center" ng-show="product.canRead" ng-repeat="product in lib.products">
+                <td><img class="img-thumbnail" style="height:128px;" ng-src="{{product.imageURL}}"></td>
+                <td>
+                  <div>{{product.name}}</div>
+                  <div>{{product.price | currency}}</div>
+                  <div>{{product.description}}</div>
+                </td>
+                <td>
+                  <div data-trigger="hover" data-toggle="popover" data-placement="bottom" title="Liked by" data-content="here names of people that like this book "
+                    >Likes count here</div>
+                  <div>
+                    <button class="btn btn-default" on-click="lib.openreview(product.name)">
+                      Read reviews <span class="glyphicon glyphicon-eye-open"</span>
+                    </button>
+                  </div>
+                  <div>
+                    <button class="btn btn-default" ng-show="product.canBuy">
+                      Add to Cart <span class="glyphicon glyphicon-shopping-cart"></span>
+                    </button>
+                  </div>
+                </td>
               </tr>
             </table>
           </div>
